# Manganese

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Rhenium/: CMakeLists.txt
Rhenium/src/: Rhenium.h  rhpch.h
Rhenium/src/Rhenium/: Manganese.h  Rhenium.h  mnpch.h  rhpch.cpp  rhpch.h
Rhenium/src/Rhenium/Core/: Application.cpp  Application.h  EntryPoint.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timestep.h  Window.cpp  Window.h
Rhenium/src/Rhenium/Core/Log/: Log.cpp  Log.h
Rhenium/src/Rhenium/Events/: ApplicationEvent.h  Event.h  EventHandler.cpp  EventHandler.h
Rhenium/src/Rhenium/Renderer/: Buffer.cpp  Buffer.h  PerspectiveCamera.cpp  PerspectiveCamera.h  PerspectiveCameraController.cpp  PerspectiveCameraController.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
Sandbox/: CMakeLists.txt
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  Sandbox.cpp
assets/shaders/: Solid_Unlit.glsl
